# CcLIVE

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: offline_demo.py
src/rtst/: __init__.py  cli.py  config.py  context.py  languages.py  pipeline.py  types.py
src/rtst/asr/: __init__.py  base.py  whisper_asr.py
src/rtst/audio/: __init__.py  capture.py  vad.py
src/rtst/captions/: __init__.py  base.py  console.py  overlay.py
src/rtst/translate/: __init__.py  argos.py  base.py  identity.py  nllb.py
tests/: conftest.py  test_captions_console.py  test_capture.py  test_cli.py  test_config.py  test_context.py  test_factories.py  test_languages.py  test_nllb.py  test_pipeline.py  test_vad.py
